Update code coverage settings and CI workflows (#17)
* chore: update code coverage settings and exclusions in Directory.Build.props [skip ci]

* chore: update Microsoft.NET.ILLink.Tasks to version 10.0.3 in multiple packages.lock.json files

* chore: update CI and Prerelease workflows for improved event handling and triggers

* Address Copilot comments

* fix: remove redundant condition in workflow_run trigger for prerelease job

* Add Codecov and coverage settings configuration files

- Introduced `codecov.yaml` for Codecov configuration, specifying coverage precision, thresholds, and ignored paths.
- Added `coverage.settings.xml` to define module paths, source exclusions, and attributes for code coverage analysis.

* fix: correct regex patterns for compiler-generated and test file exclusions in coverage settings

* chore: improved coverage; diff-common sync with DevOps

* chore: improved coverage; diff-common sync with DevOps

* fix: add REPORTGENERATOR_LICENSE secret to CI workflow

* fix: minimum exclusions for codecov (all incl./excl. should be done in the cobertura.xml)

* fix: remove commented version comparison for Microsoft.Testing.Extensions.CodeCoverage

* docs: update README with additional badges and improved formatting

* fix: update CI workflow triggers and improve coverage exclusions

* fix: simplify exception assertion in deserialization tests

* fix: add concurrency settings to prevent duplicate CI runs

* fix: add blank line for improved readability in CI workflow

--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -1,12 +1,18 @@
 name: "CI: Build, Test, Benchmark"
+
 on:
   push:
     branches:
-      - "**" # trigger on push for all branches or...
+      - "**" # trigger on push for all branches
 
   pull_request:
     branches:
-      - "**" # ...on PR for all branches.
+      - "**" # trigger on PR for all branches.
+
+  pull_request_review:
+    types:
+      - submitted # trigger after any submitted code review (comments, changes requested, approved, including Copilot);
+                  # jobs further restrict to approved reviews via `if: github.event.review.state == 'approved'`.
 
   workflow_dispatch:
     inputs:
@@ -22,6 +28,11 @@ on:
         description: Comma-separated preprocessor symbols
         type: string
         default: "SHORT_RUN" # *TODO* Adjust the default preprocessor symbols as needed.
+
+# Prevent duplicate runs: when pushing to a PR branch, cancel the push-triggered run in favor of the PR-triggered run
+concurrency:
+  group: ${{ github.workflow }}-${{ github.head_ref || github.ref }}
+  cancel-in-progress: true
 
 env:
   BUILD_PROJECTS: >
@@ -58,7 +69,9 @@ jobs:
   get-params:
     name: Prepare input from env, vars, secrets, inputs, and defaults
     runs-on: ubuntu-latest # in this workflow the runner doesn't matter - we're just preparing the inputs for the next workload(s).
-    if: ${{ github.event_name != 'push' || !contains(github.event.head_commit.message, '[skip ci]') }}
+    if: |
+      ( github.event_name != 'push' || !contains(github.event.head_commit.message, '[skip ci]') ) &&
+      ( github.event_name != 'pull_request_review' || github.event.review.state == 'approved' )
     outputs:
       build-projects: ${{ steps.init-params.outputs.build-projects }}
       test-projects: ${{ steps.init-params.outputs.test-projects }}
@@ -97,6 +110,9 @@ jobs:
               # E.g. for the input '["ubuntu-latest"]', the UI removes the inner quotes and it becomes the invalid JSON: '[ubuntu-latest]'.
               runners_os=$(echo "${{ inputs.runners-os }}" | jq -Rc 'split(",") | map(select(length > 0) | gsub("^\\s+|\\s+$";""))')
               preprocessor_symbols="${preprocessor_symbols};${{ inputs.preprocessor-symbols }}"
+          elif [ '${{ github.event_name }}' == "pull_request" ] || [ '${{ github.event_name }}' == "pull_request_review" ]; then
+              # For pull requests and reviews, use default values from env (no modifications needed)
+              :
           else
               echo "Unsupported event: ${{ github.event_name }}"
               exit 5
@@ -125,6 +141,7 @@ jobs:
     secrets:
       CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
       BENCHER_API_TOKEN: ${{ secrets.BENCHER_API_TOKEN }}
+      REPORTGENERATOR_LICENSE: ${{ secrets.REPORTGENERATOR_LICENSE }}
     permissions:
       contents: read # Required to checkout the code
       packages: read # Required to restore GitHub Packages NuGet packages
