fix: update CI, Prerelease, and Release workflows to include UlidTool project

--- a/.github/workflows/Prerelease.yaml
+++ b/.github/workflows/Prerelease.yaml
@@ -22,9 +22,10 @@ on:
         type: string
 
 env:
-  PACKAGE_PROJECTS: >
+  PACKAGE_PROJECTS: |
     [
-    "src/UlidType/UlidType.csproj"
+      "src/UlidType/UlidType.csproj",
+      "src/UlidTool/UlidTool.csproj"
     ]
 
   PREPROCESSOR_SYMBOLS: ""
