--- a/.github/workflows/Release.yaml
+++ b/.github/workflows/Release.yaml
@@ -9,7 +9,7 @@ on:
         type: string
 
 env:
-  PACKAGE_PROJECTS: |
+  PACKAGE_PROJECTS: >
     [
       "src/UlidType/UlidType.csproj",
       "src/UlidTool/UlidTool.csproj"
