--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -108,6 +108,7 @@ jobs:
              ([ '${{ github.event_name }}' == "push" ] && [ '${{ github.ref_name }}' == "main" ]); then
               # For pull requests, reviews, and pushes to the main branch, use default values from env (no modifications needed)
               skip_push='false'
+              echo "Event: ${{ github.event_name }}. Using default parameters from env." >> $GITHUB_STEP_SUMMARY
           elif [ '${{ github.event_name }}' == "push" ] && [ '${{ github.ref_name }}' != "main" ]; then
               preprocessor_symbols="${preprocessor_symbols};SHORT_RUN"
               # Skip push-triggered CI when an open PR exists for this branch.
@@ -119,6 +120,7 @@ jobs:
                                   --json number \
                                   --jq 'length')
               if [ "${open_pr_count}" -gt 0 ]; then
+                  echo "Open PR exists for this branch. Skipping push-triggered CI." >> $GITHUB_STEP_SUMMARY
                   skip_push='true'
               fi
           elif [ '${{ github.event_name }}' == "workflow_dispatch" ]; then
