--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -69,6 +69,8 @@ jobs:
   get-params:
     name: Prepare input from env, vars, secrets, inputs, and defaults
     runs-on: ubuntu-latest # in this workflow the runner doesn't matter - we're just preparing the inputs for the next workload(s).
+    permissions:
+      pull-requests: read
     if: |
       ( github.event_name != 'push' || !contains(github.event.head_commit.message, '[skip ci]') ) &&
       ( github.event_name != 'pull_request_review' || github.event.review.state == 'approved' )
@@ -112,12 +114,15 @@ jobs:
           elif [ '${{ github.event_name }}' == "push" ] && [ '${{ github.ref_name }}' != "main" ]; then
               # Skip push-triggered CI when an open PR exists for this branch.
               export GH_TOKEN='${{ github.token }}'
-              open_pr_count=$(gh pr list \
-                                  --repo "${{ github.repository }}" \
-                                  --head "${{ github.repository_owner }}:${{ github.ref_name }}" \
-                                  --state open \
-                                  --json number \
-                                  --jq 'length')
+              if ! open_pr_count=$(gh pr list \
+                    --repo "${{ github.repository }}" \
+                    --head "${{ github.repository_owner }}:${{ github.ref_name }}" \
+                    --state open \
+                    --json number \
+                    --jq 'length'); then
+                  open_pr_count=0
+                  echo "Failed to query PRs via gh. Running push-triggered CI with SHORT_RUN." >> $GITHUB_STEP_SUMMARY
+              fi
               preprocessor_symbols="${preprocessor_symbols};SHORT_RUN"
               if [ "${open_pr_count}" -gt 0 ]; then
                   echo "Open PR exists for this branch. Skipping push-triggered CI." >> $GITHUB_STEP_SUMMARY
