Add UlidTool CLI for generating ULIDs (#18)
* feat: add UlidTool CLI for generating ULIDs:
- Introduced a new project `UlidTool` for a command line interface to generate ULIDs.
- Implemented options for specifying the number of ULIDs to generate and output formats (ULID, GUID, detailed).
- Added README documentation for installation, usage, and command line options.
- Updated solution file to include the new `UlidTool` project.
- Added necessary dependencies for command line parsing and configuration.

* Refactor UlidTool project structure and add example for generating ULIDs

- Moved global using directives from usings.cs to Program.cs for better visibility.
- Updated solution file to change project reference for GenerateUlids from a project to a file.
- Added a new example script (GenerateUlids.cs) for generating and displaying ULIDs.
- Created a new packages.lock.json file to manage dependencies for the example.

* fix: update CI, Prerelease, and Release workflows to include UlidTool project

* fix: update workflow environment variables to use block style for better readability

* fix: update workflow environment variables to use block style for better readability

* docs: update README example usage instructions for clarity and accuracy [skip ci]

* Add unit tests for UlidTool and update project files
- Created new test project for UlidTool with references to the main project.
- Added InternalsVisibleTo attribute for UlidTool.Tests in the project file.
- Implemented unit tests for UlidToolApp, covering default generation, multiple ULID generation, format outputs, and error handling.
- Updated solution file to include UlidTool.Tests project.
- Updated README.md to specify "Crockford's Base32" for ULID format.
- Added packages.lock.json for dependency management in the test project.
- Created usings.cs file for test project with licensing information.

* docs: update README files for clarity and consistency in formatting

* fix: update CI workflow to handle event 

--- a/.github/workflows/Prerelease.yaml
+++ b/.github/workflows/Prerelease.yaml
@@ -24,7 +24,8 @@ on:
 env:
   PACKAGE_PROJECTS: >
     [
-    "src/UlidType/UlidType.csproj"
+    "src/UlidType/UlidType.csproj",
+    "src/UlidTool/UlidTool.csproj"
     ]
 
   PREPROCESSOR_SYMBOLS: ""
