--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -29,7 +29,7 @@ on:
         type: string
         default: "SHORT_RUN" # *TODO* Adjust the default preprocessor symbols as needed.
 
-# Prevent duplicate runs: when pushing to a PR branch, cancel the push-triggered run in favor of the PR-triggered run
+# Concurrency: cancel in-progress runs for the same ref
 concurrency:
   group: ${{ github.workflow }}-${{ github.head_ref || github.ref }}
   cancel-in-progress: true
@@ -69,6 +69,8 @@ jobs:
   get-params:
     name: Prepare input from env, vars, secrets, inputs, and defaults
     runs-on: ubuntu-latest # in this workflow the runner doesn't matter - we're just preparing the inputs for the next workload(s).
+    permissions:
+      pull-requests: read
     if: |
       ( github.event_name != 'push' || !contains(github.event.head_commit.message, '[skip ci]') ) &&
       ( github.event_name != 'pull_request_review' || github.event.review.state == 'approved' )
@@ -84,6 +86,7 @@ jobs:
       max-regression-pct: ${{ steps.init-params.outputs.max-regression-pct }}
       minver-tag-prefix: ${{ steps.init-params.outputs.minver-tag-prefix }}
       minver-prerelease-id: ${{ steps.init-params.outputs.minver-prerelease-id }}
+      skip-push: ${{ steps.init-params.outputs.skip-push }}
     steps:
       - name: Prepare argument values
         id: init-params
@@ -100,19 +103,38 @@ jobs:
           max_regression_pct='${{ env.MAX_REGRESSION_PCT }}'
           minver_tag_prefix='${{ env.MINVERTAGPREFIX }}'
           minver_prerelease_id='${{ env.MINVERDEFAULTPRERELEASEIDENTIFIERS }}'
+          skip_push='false'
 
-          if [ '${{ github.event_name }}' == "push" ]; then
-              # Set the values for push events, and add SHORT_RUN to preprocessor_symbols for faster benchmark tests (less precise, yet acceptable for CI runs).
+          if [ '${{ github.event_name }}' == "pull_request" ] || \
+             [ '${{ github.event_name }}' == "pull_request_review" ] || \
+             ([ '${{ github.event_name }}' == "push" ] && [ '${{ github.ref_name }}' == "main" ]); then
+              # For pull requests, reviews, and pushes to the main branch, use default values from env (no modifications needed)
+              echo "Event: ${{ github.event_name }}. Using default parameters from env." >> $GITHUB_STEP_SUMMARY
+          elif [ '${{ github.event_name }}' == "push" ] && [ '${{ github.ref_name }}' != "main" ]; then
+              # Skip push-triggered CI when an open PR exists for this branch.
+              export GH_TOKEN='${{ github.token }}'
+              if ! open_pr_count=$(gh pr list \
+                --repo "${{ github.repository }}" \
+                --state open \
+                --json headRefName \
+                --jq 'map(select(.headRefName == "${{ github.ref_name }}")) | length'); then
+                open_pr_count=0
+                echo "Failed to query PRs via gh. Running push-triggered CI with SHORT_RUN." >> $GITHUB_STEP_SUMMARY
+              fi
+              echo "Open PR count for '${{ github.ref_name }}': ${open_pr_count}" >> $GITHUB_STEP_SUMMARY
               preprocessor_symbols="${preprocessor_symbols};SHORT_RUN"
+              if [ "${open_pr_count}" -gt 0 ]; then
+                  echo "Open PR exists for this branch. Skipping push-triggered CI." >> $GITHUB_STEP_SUMMARY
+                  skip_push='true'
+              else
+                  echo "No open PRs for this branch. Running push-triggered CI with SHORT_RUN preprocessor symbol." >> $GITHUB_STEP_SUMMARY
+              fi
           elif [ '${{ github.event_name }}' == "workflow_dispatch" ]; then
               # Get the values from the UI inputs of workflow_dispatch event. Convert comma-separated runners' OS values to JSON array
               # There is a known GitHub actions issue: the workflow dispatch UI doesn't properly handle JSON strings with quotes.
               # E.g. for the input '["ubuntu-latest"]', the UI removes the inner quotes and it becomes the invalid JSON: '[ubuntu-latest]'.
               runners_os=$(echo "${{ inputs.runners-os }}" | jq -Rc 'split(",") | map(select(length > 0) | gsub("^\\s+|\\s+$";""))')
               preprocessor_symbols="${preprocessor_symbols};${{ inputs.preprocessor-symbols }}"
-          elif [ '${{ github.event_name }}' == "pull_request" ] || [ '${{ github.event_name }}' == "pull_request_review" ]; then
-              # For pull requests and reviews, use default values from env (no modifications needed)
-              :
           else
               echo "Unsupported event: ${{ github.event_name }}"
               exit 5
@@ -131,12 +153,14 @@ jobs:
               echo "max-regression-pct=${max_regression_pct}"
               echo "minver-tag-prefix=${minver_tag_prefix}"
               echo "minver-prerelease-id=${minver_prerelease_id}"
+              echo "skip-push=${skip_push}"
           }  >> $GITHUB_OUTPUT
 
   call-ci:
     name: "Run CI: Build, Test, Benchmarks"
     needs:
       - get-params
+    if: ${{ needs.get-params.outputs.skip-push != 'true' }}
     uses: vmelamed/vm2.DevOps/.github/workflows/_ci.yaml@main
     secrets:
       CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
