--- a/.github/workflows/Release.yaml
+++ b/.github/workflows/Release.yaml
@@ -11,7 +11,8 @@ on:
 env:
   PACKAGE_PROJECTS: >
     [
-    "src/UlidType/UlidType.csproj"
+    "src/UlidType/UlidType.csproj",
+    "src/UlidTool/UlidTool.csproj"
     ]
 
   PREPROCESSOR_SYMBOLS: "" # Semicolon-separated preprocessor symbols to pass to the compiler.
