--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -11,7 +11,8 @@ on:
 
   pull_request_review:
     types:
-      - submitted # trigger after any submitted code review (comments, changes requested, approved, including Copilot); jobs further restrict to approved reviews via `if: github.event.review.state == 'approved'`.
+      - submitted # trigger after any submitted code review (comments, changes requested, approved, including Copilot);
+                  # jobs further restrict to approved reviews via `if: github.event.review.state == 'approved'`.
 
   workflow_dispatch:
     inputs:
