--- a/.github/workflows/Release.yaml
+++ b/.github/workflows/Release.yaml
@@ -87,12 +87,10 @@ jobs:
       NUGET_API_GITHUB_KEY: ${{ secrets.NUGET_API_GITHUB_KEY }}
       NUGET_API_NUGET_KEY: ${{ secrets.NUGET_API_NUGET_KEY }}
       NUGET_API_KEY: ${{ secrets.NUGET_API_KEY }}
-      RELEASE_PAT: ${{ secrets.RELEASE_PAT }} # Optional Personal Access Token for pushing commits and tags if GITHUB_TOKEN permissions are insufficient.
+      RELEASE_PAT: ${{ secrets.RELEASE_PAT }} # Required PAT for pushing changelog and tags past branch protection.
     permissions:
-      contents: write # Required to checkout the code and create releases
-      packages: write # Required to publish GitHub Packages NuGet packages
-      pull-requests: write # Required to comment on PRs
-      checks: write # Required to create GitHub Checks
+      contents: write # Required to checkout the code, push changelog, and create tags
+      packages: read  # Required to restore GitHub Packages NuGet packages
     with:
       dotnet-version: ${{ needs.get-params.outputs.dotnet-version }}
       package-projects: ${{ needs.get-params.outputs.package-projects }}
